ccjegyzet/new/ref.txt
$ clang -c ref.cc
ref.cc:34:9: warning: reference to stack memory associated with local variable 'val' returned [-Wreturn-stack-address]
        return val;
               ^~~
ref.cc:45:9: warning: returning reference to local temporary object [-Wreturn-stack-address]
        return 5;
               ^
ref.cc:58:2: error: no matching function for call to 'add3'
        add3(v, 5, 6);
        ^~~~
ref.cc:13:6: note: candidate function not viable: expects an l-value for 2nd argument
void add3(int &dest, int &a, int &b)
     ^
2 warnings and 1 error generated.
